Release 4.0.9 (unreleased)
==========================

Bug fixes:
----------

- GUI: fix handling of exchange coefficient boundary conditions.

- Major fix in parallel when activating head losses and improved
  hydrostatic pressure algorithm (iphydr = 1).

- Fix possible crash or error when computing wall distance for 2D
  (single cell layer) meshes.

Release 4.0.8 (20 Jul 2017)
===========================

Bug fixes:
----------

- Fix for triangulation of warped faces issue.

- Fix crash using GUI-defined setup when some property labels re not defined."

- Fix launch error due to bad generation of hostsfile using SLURM in some
  cases (only when the MPI library used does not include SLURM support,
  which is seldom the case).

- GUI: fix name of wall thermal conductivity in radiative transfer node.

- Fix issue #183 (conjugate heat transfer with porosity).

- Fix for program launch when Coupling with Syrthes or self using srun launcher.

- Modify EnSight time output format to workarount ParaView reader bug for
  small time steps.

- Fix an issue with SGE batch manager support.

- Fix crash with Code_Aster coupling when running in parallel.

- Fix missing reading and writing of mass fluxes in checkpoint/restart.

- Fix for 1D point location.

- Fix detection of writer format availability for plugins.

- GUI: fix further issues when loading some old case files due
  to zones renumbering.

Release 4.0.7 (20 Jan 2017)
===========================

Bug fixes:
----------

- GUI: fix update issues when removing or merging volume zones.

- Radiative model: GUI setting for imodak should not overwrite settings
  from the cs_user_radiative_transfer_param subroutine.

- Allow mesh joining when no vertices are modified.

- Fix several face weight indices in scalar balance by zone.

Architectural changes
---------------------

- Update Catalyst output to avoid deprecated function warning using ParaView
  version 5.1 or above.
