@@ -4,6 +4,8 @@ Release 4.0.9 (unreleased)
 Bug fixes:
 ----------
 
+- Fix interlock in Syrthes coupling when combining surface and volume coupling.
+
 - GUI: fix handling of exchange coefficient boundary conditions.
 
 - Major fix in parallel when activating head losses and improved
